--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,5 @@
-cmake_minimum_required(VERSION 3.16.4)
+cmake_minimum_required(VERSION 3.16.2)
 project(MonoScript)
-
-enable_language(C ASM_MASM)
 
 set(CMAKE_CXX_STANDARD 20)
 
@@ -14,7 +12,8 @@ target_include_directories(MonoScript PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/libs/mo
 target_include_directories(MonoScript PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/libs/mono/mono/eglib)
 target_include_directories(MonoScript PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/libs)
 target_include_directories(MonoScript PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/MonoScript/Mini)
+target_include_directories(MonoScript PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libs/mono)
 
-include(cmake/Mono.cmake)
+add_subdirectory(cmake)
 
 target_link_libraries(MonoScript MonoScriptLibrary)
